# meal_planner

./: .gitignore  README.md  bandit.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: run_with_scheduled.yml  tests.yml
src/meal_planner/: mail_notifier.py  main.py  meal_plan_formatter.py  meal_plan_generator.py  mealitem.py  meals_list_manager.py  plan_period.py
tests/: test_mail_notifier.py  test_meal_plan_generator.py
