[metadata]
name = meal_planner
description = "Creates meal plan of main lunch courses because family needs to have one home cooked meal a day. By default the meal plan is generated for the next week. Meal plan is based on google sheet"
author = Roman Jergon
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = meal_planner
install_requires =
    python-dotenv>=0.19.1
    requests>=2.26.0
    pygsheets>=2.0.5
    python-dateutil>=2.8.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    tox>=3.24

[flake8]
max-line-length = 88
extend-ignore = E203, E501
